headscale-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: headscale
spec:
    replicas: 1
    selector:
        matchLabels:
            app: headscale
    template:
        metadata:
            labels:
                app: headscale
        spec:
            containers:
                - name: headscale
                  image: headscale/headscale:latest
                  args: ["headscale", "serve"]
                  ports:
                      - containerPort: 8080
                  volumeMounts:
                      - name: config-volume
                        mountPath: /etc/headscale/config.yaml
                        subPath: config.yaml
                      - name: data
                        mountPath: /var/lib/headscale
            volumes:
                - name: config-volume
                  configMap:
                      name: headscale-config
                - name: data
                  persistentVolumeClaim:
                      claimName: headscale-pvc
