router-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: subnet-router
spec:
    replicas: 1
    selector:
        matchLabels:
            app: subnet-router
    template:
        metadata:
            labels:
                app: subnet-router
        spec:
            containers:
                - name: tailscale
                  image: tailscale/tailscale:latest
                  securityContext:
                      capabilities:
                          add: ["NET_ADMIN"]
