headscale-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: headscale
